# dnd-summarizer-ui

./: .gitignore  README.md
server/: pyproject.toml
server/src/: constants.py  init.py  main.py  state.py
server/src/api/: routes.py
server/src/audio/: stt.py  tts.py
server/src/models/: causal_inference.py  load_model.py
server/src/rag/: chunking.py  inference.py
server/src/summarization/: summarize.py
server/src/transcription/: constants.py  refine.py  transcribe.py
web/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
web/dnd-summarizer-ui/: index.html  package-lock.json  package.json
web/src/: App.tsx
web/src/api/: api.ts
web/src/components/: Nav.tsx
web/src/components/audio-upload/: AudioUpload.tsx  AudioUploadContainer.tsx  index.ts
web/src/components/chat/: ChatHistory.tsx  MicRecorder.tsx  index.ts
web/src/components/summary/: Summary.tsx  SummaryContainer.tsx  index.ts
web/src/pages/: ChatPage.tsx  SummaryPage.tsx  UploadPage.tsx
